...
    android:paddingHorizontal="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    app:layout_constraintHorizontal_chainStyle="spread">

    <TextView
        android:id="@+id/nameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/item_name_description"
        android:importantForAutofill="no"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/extraInfoEdit"
        app:layout_constraintEnd_toStartOf="@id/inventoryAmountEdit"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
